Fix overflow on small display on home page

--- a/style.css
+++ b/style.css
@@ -261,7 +261,7 @@ ul.slides li img
 
 .page-desc
 {
-    width: 1280px;
+    max-width: 1280px;
     float: right;
     font-size: 24px;
     line-height: 40px;
